--- a/src/web/Divider/styles.css
+++ b/src/web/Divider/styles.css
@@ -5,5 +5,5 @@
   width: 24px;
   height: 3px;
   border-radius: 3px;
-  background: rgba(0, 0, 0, 0.5);
+  background: #FFEECC;
 }
